force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/ucinn_ascendv2__Involvement_Value__c.object-meta.xml
<CustomObject>
    <description>List of association/club/memberships.</description>
    <label>Involvement Value</label>
    <nameField>
        <label>Involvement Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involvement Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>