force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/Award_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Award_Type_Code__c</fullName>
    <label>Award Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alumni Association</fullName>
            </value>
            <value>
                <fullName>College/Unit</fullName>
            </value>
            <value>
                <fullName>Departmental</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Student Organization</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>