force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/Award_Unit_College__c.field-meta.xml
<CustomField>
    <fullName>Award_Unit_College__c</fullName>
    <label>Award Unit College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture and Life Sciences</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Human Sciences</fullName>
            </value>
            <value>
                <fullName>Interdisciplinary</fullName>
            </value>
            <value>
                <fullName>Liberal Arts and Sciences</fullName>
            </value>
            <value>
                <fullName>Memorial Union</fullName>
            </value>
            <value>
                <fullName>Veterinary Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>