force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/Notes_about_Involvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Notes_about_Involvement_Type__c</fullName>
    <label>Notes about Involvement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>