force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/ucinn_ascendv2__Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>