force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <inlineHelpText>Last date involvement code can be used</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>