force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/ucinn_ascendv2__Event_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Event_Business_Unit__c</fullName>
    <inlineHelpText>The business unit to which this involvement value belongs.</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Unit</valueSetName>
    </valueSet>
</CustomField>