force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/ucinn_ascendv2__Involvement_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Involvement_Description__c</fullName>
    <label>Involvement Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>