force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/fields/ucinn_ascendv2__Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Type__c</fullName>
    <description>Used for Involvement Codes</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Constituent Type</fullName>
            </value>
            <value>
                <fullName>Gift Planning</fullName>
            </value>
            <value>
                <fullName>Gift Planning Click Throughs</fullName>
            </value>
            <value>
                <fullName>ISU Greek Membership</fullName>
            </value>
            <value>
                <fullName>ISU Letterwinners</fullName>
            </value>
            <value>
                <fullName>ISU Residence</fullName>
            </value>
            <value>
                <fullName>OSPA Awards</fullName>
            </value>
            <value>
                <fullName>Season Ticket Holders</fullName>
            </value>
            <value>
                <fullName>Special Interest Societies</fullName>
            </value>
            <value>
                <fullName>Student Honor Society</fullName>
            </value>
            <value>
                <fullName>Student Information</fullName>
            </value>
            <value>
                <fullName>Student Organizations</fullName>
            </value>
            <value>
                <fullName>Study Abroad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>