force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Award_Involvement_types.listView-meta.xml
<ListView>
    <fullName>Award_Involvement_types</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>Notes_about_Involvement_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Awards</value>
    </filters>
    <label>Award Involvement types</label>
</ListView>