force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Award_List_for_PD_Students.listView-meta.xml
<ListView>
    <fullName>Award_List_for_PD_Students</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Effective_Date__c</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Event_Business_Unit__c</columns>
    <columns>ucinn_ascendv2__Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Awards</value>
    </filters>
    <label>Award List for PD Students</label>
</ListView>