force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Constituent_Type_Picklist.listView-meta.xml
<ListView>
    <fullName>Constituent_Type_Picklist</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Effective_Date__c</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Constituent Type</value>
    </filters>
    <label>Constituent Type Picklist</label>
</ListView>