force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Gift_Planning_Values.listView-meta.xml
<ListView>
    <fullName>Gift_Planning_Values</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Gift Planning,Gift Planning Click Throughs</value>
    </filters>
    <label>Gift Planning Values</label>
</ListView>