force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Honors_codes.listView-meta.xml
<ListView>
    <fullName>Honors_codes</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Student Honors and Awards</value>
    </filters>
    <label>Honors codes</label>
</ListView>