force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Malcolm_Performance_Center_List_Wr_T_F.listView-meta.xml
<ListView>
    <fullName>Malcolm_Performance_Center_List_Wr_T_F</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>MTO,MTI,MCC,SPTRK,MWR,SPWRS,WTO,WTI,WCC</value>
    </filters>
    <label>Malcolm Performance Center List - Wr/T/F</label>
</ListView>