force-app/main/default/objects/ucinn_ascendv2__Involvement_Value__c/listViews/Student_Athletics.listView-meta.xml
<ListView>
    <fullName>Student_Athletics</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Involvement_Description__c</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>Notes_about_Involvement_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Type__c</field>
        <operation>equals</operation>
        <value>Athletics</value>
    </filters>
    <label>Student Athletics</label>
</ListView>